--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,13 +1,6 @@
-<head>
-  <title>Berke's Blog</title>
-</head>
+<div class="center jumbotron">
+  <h1>AlphaBlog</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
 
-<body style="background-color:powderblue;">
-  <h2 style="color:crimson;text-align:center">Welcome to My Blog</h1>
-  <p style="font-family:verdana;text-align:center;">My <strong>first</strong> paragraph and a link to <%= link_to "Google","https://www.google.com" %></p>
-  <p><img src="sloth.jpg" alt="image of a sloth"></p>
-  <%= link_to "About", about_path %> | 
-  <%= link_to "Alpha Blog",articles_path %>
-  <hr>
-  <p style="font-size:10px;text-align:right"><%= link_to "çok ama ÇOK gizli maddeler",sevr_path %></p>
-</body>
+<p style="font-size:10px;text-align:right"><%= link_to "çok ama ÇOK gizli maddeler",sevr_path %></p>
