--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -33,6 +33,8 @@ $navbar-default-bg: darkgreen;
   margin-bottom: 30px;
   letter-spacing: -1px;
   font-weight: bold;
+  padding-top: 275px;
+  text-shadow: 3px 3px darkgreen;
 }
 
 .btn-xlarge {
