--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,14 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="https://mtm.yildiz.edu.tr">Yiğitlerin yoğurulduğu yer</a>
+      Copyright &copy; <a href="http://mtm.yildiz.edu.tr">Yiğitlerin yoğurulduğu yer</a>
       by Börke</a>
     </small>
     <nav>
       <ul>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Homepage", root_path %></li>
+        <li><%= link_to "Sevr", sevr_path %></li>
       </ul>
     </nav>
   </footer>
