--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <h1>AlphaBlog</h1>
-  <%= link_to "Sign up now", "#", class: "btn btn-success btn-lg btn-xlarge" %>
+  <%= link_to "Sign up now", "signup", class: "btn btn-success btn-lg btn-xlarge" %>
 </div>
 
 <p style="font-size:10px;text-align:right"><%= link_to "çok ama ÇOK gizli maddeler",sevr_path %></p>
